# osac-test-infra

./: Containerfile  Makefile  OWNERS  pyproject.toml
.github/actions/gather-artifacts/: action.yml
.github/actions/notify-slack/: action.yml
.github/actions/setup-runner/: action.yml
.github/actions/teardown/: action.yml
.github/scripts/: teardown.sh
.github/workflows/: e2e-full-install-test.yml  e2e-full-install.yml  e2e-test.yml  e2e-vmaas-caller.yml  e2e-vmaas-full-install-caller.yml  e2e-vmaas-full-install.yml  e2e-vmaas.yml  e2e.yml
scripts/: gather-osac-logs.sh
tests/: conftest.py  grpc_client.py  helpers.py  k8s_client.py
tests/caas/: test_cluster_order_api_fields.py  test_cluster_order_delete_during_provision.py  test_cluster_template_immutability.py
tests/catalog/: conftest.py  test_compute_instance_catalog_item_lifecycle.py
tests/core/: grpc_client.py  helpers.py  k8s_client.py  osac_cli.py
tests/storage/: conftest.py  test_tenant_storage_lifecycle.py
tests/vmaas/: conftest.py  test_compute_instance_creation.py  test_compute_instance_delete_during_provision.py  test_compute_instance_instance_type.py  test_console.py  test_instance_type_lifecycle.py  test_public_ip_pool_lifecycle.py  test_subnet_lifecycle.py  test_virtual_network_lifecycle.py
vault/scripts/: vault-add-registry-auth.sh  vault-sync.sh
