[project]
name = "osac-test-infra"
version = "0.1.0"
description = "OSAC end-to-end test infrastructure"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0",
    "pyyaml>=6.0",
    "websocket-client>=1.6",
]

[tool.setuptools.packages.find]
include = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.basedpyright]
reportUnusedCallResult = false
reportAny = false
reportExplicitAny = false

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ANN", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN101", "ANN201"]
